Initial Xauth grabber (needs cleaning)

--- a/XAU/Views/Pages/DashboardPage.xaml
+++ b/XAU/Views/Pages/DashboardPage.xaml
@@ -22,6 +22,11 @@
             Text="{Binding ViewModel.Attached}"
             Foreground="{Binding ViewModel.AttachedColor}"
         ></ui:TextBlock>
+        <ui:TextBlock 
+            Padding="0, 30, 0, 0"
+            Text="{Binding ViewModel.LoggedIn}"
+            Foreground="{Binding ViewModel.LoggedInColor}"
+        ></ui:TextBlock>
         <ui:Image
             HorizontalAlignment="Center"
             VerticalAlignment="Top"
