initial games tab logic sort, filter and XUID override are still todo renamed dashboard to home

--- a/XAU/Views/Pages/HomePage.xaml
+++ b/XAU/Views/Pages/HomePage.xaml
@@ -1,13 +1,13 @@
 ﻿<Page
-    x:Class="XAU.Views.Pages.DashboardPage"
+    x:Class="XAU.Views.Pages.HomePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:XAU.Views.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-    Title="DashboardPage"
-    d:DataContext="{d:DesignInstance local:DashboardPage,
+    Title="HomePage"
+    d:DataContext="{d:DesignInstance local:HomePage,
                                      IsDesignTimeCreatable=False}"
     d:DesignHeight="450"
     d:DesignWidth="800"
@@ -138,6 +138,7 @@
             HorizontalAlignment="Right"
             VerticalAlignment="Top"
             Content="Refresh"
+            IsEnabled="{Binding ViewModel.IsLoggedIn, Mode=OneWay}"
             Command="{Binding ViewModel.RefreshProfileCommand, Mode=OneWay}"/>
     </Grid>
 
