Change width of pane to match game list newline point

--- a/XAU/Views/Windows/MainWindow.xaml
+++ b/XAU/Views/Windows/MainWindow.xaml
@@ -17,7 +17,7 @@
     ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
     ExtendsContentIntoTitleBar="True"
     Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-    WindowBackdropType="Mica"
+    WindowBackdropType="Acrylic"
     WindowCornerPreference="Round"
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
@@ -31,6 +31,7 @@
             x:Name="NavigationView"
             Grid.Row="1"
             Padding="42,0,42,0"
+            OpenPaneLength="220"
             BreadcrumbBar="{Binding ElementName=BreadcrumbBar}"
             FooterMenuItemsSource="{Binding ViewModel.FooterMenuItems, Mode=OneWay}"
             FrameMargin="0"
