--- a/XAU/Views/Pages/AchievementsPage.xaml
+++ b/XAU/Views/Pages/AchievementsPage.xaml
@@ -18,11 +18,76 @@
 
 
     <Grid>
-        <TextBlock Text="Achievements"
-                   FontSize="30"
-                   FontWeight="Bold"
-                   Margin="0,0,0,20"
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Center" />
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <ui:TextBox
+                Grid.Row="1"
+                Grid.Column="0"
+                x:Name="TitleIDBox"
+                IsEnabled="{Binding ViewModel.TitleIDEnabled}"
+                Padding="10,4,8,7"
+                Margin="0,0,44,0"
+                Text="{Binding ViewModel.TitleIDOverride, Mode=TwoWay}"
+                TextAlignment="Center"
+                ClearButtonEnabled="False" 
+            ></ui:TextBox>
+            <ui:Button
+                Grid.Row="1"
+                Grid.Column="0"
+                x:Name="RefreshButton"
+                IsEnabled="{Binding ViewModel.TitleIDEnabled}"
+                Padding="10,5,8,5"
+                Margin="10,0,5,0"
+                Content=""
+                HorizontalAlignment="Right"
+                Icon="{ui:SymbolIcon ArrowRepeatAll24}"
+                Command="{Binding ViewModel.RefreshAchievementsCommand}"
+            />
+            <Label 
+                Grid.Row="0" 
+                Grid.Column="0"
+                Margin="00,0,54,0"
+                Target="{Binding ElementName=TitleIDBox}"
+                Content="TitleID Override"
+                VerticalAlignment="Center"
+                HorizontalAlignment="left"/>
+
+            <Label 
+                Grid.Row="0" 
+                Grid.Column="1"
+                Margin="10,0,10,0"
+                Target="{Binding ElementName=TitleIDBox}"
+                Content="{Binding ViewModel.GameInfo}"
+                VerticalAlignment="Center"
+                HorizontalAlignment="Left"/>
+            <ui:Button
+                Grid.Row="0"
+                Grid.Column="2"
+                x:Name="UnlockAllButton"
+                IsEnabled="{Binding ViewModel.Unlockable}"
+                Padding="10,5,8,5"
+                Margin="10,0,5,0"
+                Content="Unlock All"
+                HorizontalAlignment="Right"
+                Command="{Binding ViewModel.RefreshAchievementsCommand}"
+            />
+        </Grid>
+        <DataGrid Grid.Row="1"
+                  Margin="0,5,0,0"
+                  ItemsSource="{Binding ViewModel.DGAchievements}"
+        >
+        </DataGrid>
     </Grid>
 </Page>
