--- a/XAU/Views/Pages/AchievementsPage.xaml
+++ b/XAU/Views/Pages/AchievementsPage.xaml
@@ -17,10 +17,10 @@
       mc:Ignorable="d">
 
 
-    <Grid>
+    <Grid Name="MainGrid">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid>
             <Grid.RowDefinitions>
@@ -84,10 +84,50 @@
                 Command="{Binding ViewModel.RefreshAchievementsCommand}"
             />
         </Grid>
-        <DataGrid Grid.Row="1"
-                  Margin="0,5,0,0"
-                  ItemsSource="{Binding ViewModel.DGAchievements}"
+        <DataGrid Grid.Row="1"  
+                  VerticalScrollBarVisibility="Visible" 
+                  HorizontalScrollBarVisibility="Visible"
+                  Margin="0,5,0,5" 
+                  AutoGenerateColumns="False"  
+                  ItemsSource="{Binding ViewModel.DGAchievements}" 
+                  IsReadOnly="True"
+                  CanUserAddRows="False"
+                  CanUserDeleteRows="False"
+                  CanUserReorderColumns="False"
+                  CanUserResizeColumns="True"
+                  CanUserResizeRows="False"
+                  CanUserSortColumns="True"
         >
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="ID" Binding="{Binding ID}" Width="0.05*" />
+                <DataGridTextColumn Header="Achievement" Binding="{Binding Name}" Width="0.2*" >
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="TextWrapping" Value="Wrap" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+                <DataGridTextColumn Header="Description" MaxWidth="300" Binding="{Binding Description}" Width="0.25*">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="TextWrapping" Value="Wrap" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+                <DataGridTextColumn Header="Secret" Binding="{Binding IsSecret}"  Width="0.1*"/>
+                <DataGridTextColumn Header="Date Unlocked" Binding="{Binding DateUnlocked}" Width="0.27*"/>
+                <DataGridTextColumn Header="G's" Binding="{Binding Gamerscore}" Width="0.06*"/>
+                <DataGridTextColumn Header="Percentage" Binding="{Binding RarityPercentage}" Width="0.13*"/>
+                <DataGridTextColumn Header="Rarity" Binding="{Binding RarityCategory}" Width="0.12*"/>
+                <DataGridTextColumn Header="State" Binding="{Binding ProgressState}" Width="0.11*"/>
+                <DataGridTemplateColumn Header="Unlock" Width="0.13*">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Button Margin="5,5,5,5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">Unlock</Button>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+            </DataGrid.Columns>
         </DataGrid>
     </Grid>
 </Page>
