--- a/XAU/Views/Pages/SettingsPage.xaml
+++ b/XAU/Views/Pages/SettingsPage.xaml
@@ -40,8 +40,7 @@
             VerticalAlignment="Center"
             Content="Enable Auto Spoofer"
             IsChecked="{Binding ViewModel.AutoSpooferEnabled, Mode=TwoWay}"
-            Command="{Binding ViewModel.SaveSettingsCommand}"
-            IsEnabled="False"></CheckBox>
+            Command="{Binding ViewModel.SaveSettingsCommand}"></CheckBox>
         <CheckBox
             Grid.Column="2"
             Margin="5,0,5,0"
