Add titleID search Fix scrolling on achievement list

--- a/XAU/Views/Pages/AchievementsPage.xaml
+++ b/XAU/Views/Pages/AchievementsPage.xaml
@@ -6,6 +6,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
       Title="AchievementsPage"
+      x:Name="AchievementsPagen"
       d:DataContext="{d:DesignInstance local:AchievementsPage,
                                  IsDesignTimeCreatable=False}"
       d:DesignHeight="450"
@@ -16,7 +17,9 @@
       mc:Ignorable="d">
 
 
-    <Grid Name="MainGrid">
+    <Grid
+          Height="{Binding ElementName=AchievementsPagen, Path=ActualHeight}"
+          Width="{Binding ElementName=AchievementsPagen, Path=ActualWidth}">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
@@ -84,7 +87,7 @@
             />
         </Grid>
         <DataGrid Grid.Row="1"  
-                  VerticalScrollBarVisibility="Hidden" 
+                  VerticalScrollBarVisibility="Visible" 
                   HorizontalScrollBarVisibility="Visible"
                   Margin="0,5,0,5" 
                   AutoGenerateColumns="False"  
@@ -117,8 +120,8 @@
                 <DataGridTextColumn Header="Date Unlocked" Binding="{Binding DateUnlocked}" Width="0.27*"/>
                 <DataGridTextColumn Header="G's" Binding="{Binding Gamerscore}" Width="0.06*"/>
                 <DataGridTextColumn Header="Percentage" Binding="{Binding RarityPercentage}" Width="0.13*"/>
-                <DataGridTextColumn Header="Rarity" Binding="{Binding RarityCategory}" Width="0.12*"/>
-                <DataGridTextColumn Header="State" Binding="{Binding ProgressState}" Width="0.11*"/>
+                <DataGridTextColumn Header="Rarity" Binding="{Binding RarityCategory}" Width="0.11*"/>
+                <DataGridTextColumn Header="State" Binding="{Binding ProgressState}" Width="0.12*"/>
                 <DataGridTemplateColumn Header="Unlock" Width="0.13*">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
