Replace memory.dll dependency with code from memory.dll Remove the admin requirement Add github actions Add updating for github actions builds

--- a/XAU/Views/Pages/InfoPage.xaml
+++ b/XAU/Views/Pages/InfoPage.xaml
@@ -22,7 +22,7 @@
             Text="Info" />
         <TextBlock
             FontSize="16"
-            Text="Version: 2.1.0" />
+            Text="{Binding ViewModel.ToolVersion}" />
         <TextBlock
             FontSize="16"
             Text="Creator: Draff" />
