--- a/XAU/Views/Pages/GamesPage.xaml
+++ b/XAU/Views/Pages/GamesPage.xaml
@@ -6,8 +6,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
       Title="GamesPage"
-      d:DataContext="{d:DesignInstance local:GamesPage,
-                                 IsDesignTimeCreatable=False}"
+      d:DataContext="{d:DesignInstance local:GamesPage,IsDesignTimeCreatable=False}"
       d:DesignHeight="450"
       d:DesignWidth="800"
       ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
@@ -35,18 +34,17 @@
             <ui:TextBox
                 Grid.Row="1"
                 Grid.Column="0"
-                x:Name="XUIDBox"
+                x:Name="XUidBox"
                 IsEnabled="{Binding ViewModel.IsInitialized}"
                 Padding="10,4,8,7"
                 Margin="0,0,44,0"
-                Text="{Binding ViewModel.XuidOverride, Mode=TwoWay}"
+                Text="{Binding ViewModel.XUidOverride, Mode=TwoWay}"
                 TextAlignment="Center"
                 ClearButtonEnabled="False" 
             ></ui:TextBox>
             <ui:Button
                 Grid.Row="1"
                 Grid.Column="0"
-                x:Name="RefreshButton"
                 IsEnabled="{Binding ViewModel.IsInitialized}"
                 Padding="10,5,8,5"
                 Margin="10,0,5,0"
@@ -59,7 +57,7 @@
                 Grid.Row="0" 
                 Grid.Column="0"
                 Margin="10,0,44,0"
-                Target="{Binding ElementName=XUIDBox}"
+                Target="{Binding ElementName=XUidBox}"
                 Content="XUID Override"
                 VerticalAlignment="Top"
                 HorizontalAlignment="Center"/>
@@ -79,7 +77,6 @@
             <ui:Button
                 Grid.Row="1"
                 Grid.Column="1"
-                x:Name="SearchButton"
                 IsEnabled="{Binding ViewModel.IsInitialized}"
                 Padding="10,5,8,5"
                 Margin="10,0,5,0"
@@ -166,7 +163,7 @@
                                     <Label Content="{Binding CurrentAchievements}" HorizontalAlignment="Left" Margin="0,1,0,0"/>
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,5,0">
-                                    <Label Content="{Binding Gamerscore}" HorizontalAlignment="Right" HorizontalContentAlignment="Right" Margin="0,2,0,0"/>
+                                    <Label Content="{Binding GamerScore}" HorizontalAlignment="Right" HorizontalContentAlignment="Right" Margin="0,2,0,0"/>
                                     <ui:Image Source="pack://application:,,,/Assets/G.png" Height="17" Margin="5,0,0,0"/>
                                 </StackPanel>
                             </Grid>
